--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="search_hint">hint</string>
     <string name="search">Search Here</string>
     <string name="food_check">Food-Check</string>
-    <string name="recent_search_history">Recent Search History</string>
+    <string name="recent_search_history">Recent Recipes</string>
     <string name="go_to_settings">Settings</string>
     <string name="right_button">Right Button</string>
     <string name="left_button">Left Button</string>
